new lines were added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>First pipleine</title>
 </head>
 <body>
-   welcome to Jenkins....!!!!
+   welcome to Jenkins....
+   this is a simple pipleine 
+   create by kiruba
+   
 </body>
 </html>
