--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>First pipleine</title>
 </head>
 <body>
-   welcome to Jenkins....
-   this is a simple pipleine 
-   create by kiruba
-   
+   <h1>welcome to Jenkins....</h1>
+   <h2>this is a simple pipleine </h2>
+   <h2>create by kiruba </h2>
+
 </body>
 </html>
